; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_revparse.c_git_revparse_ext.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_revparse.c_git_revparse_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_revparse_ext(i32** %0, i32** %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i32** %1, i32*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32* null, i32** %12, align 8
  store i32* null, i32** %13, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = call i32 @revparse__ext(i32** %12, i32** %13, i64* %11, i32* %14, i8* %15)
  store i32 %16, i32* %10, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %4
  br label %26

19:                                               ; preds = %4
  %20 = load i32*, i32** %12, align 8
  %21 = load i32**, i32*** %6, align 8
  store i32* %20, i32** %21, align 8
  %22 = load i32*, i32** %13, align 8
  %23 = load i32**, i32*** %7, align 8
  store i32* %22, i32** %23, align 8
  %24 = load i64, i64* %11, align 8
  %25 = call i32 @GIT_UNUSED(i64 %24)
  store i32 0, i32* %5, align 4
  br label %32

26:                                               ; preds = %18
  %27 = load i32*, i32** %12, align 8
  %28 = call i32 @git_object_free(i32* %27)
  %29 = load i32*, i32** %13, align 8
  %30 = call i32 @git_reference_free(i32* %29)
  %31 = load i32, i32* %10, align 4
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %26, %19
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @revparse__ext(i32**, i32**, i64*, i32*, i8*) #1

declare dso_local i32 @GIT_UNUSED(i64) #1

declare dso_local i32 @git_object_free(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
